- Bug opgelost in invoer grote HEX getallen. 
- Alias funktionaliteit toegevoegd:
  * Voeg een alias toe met [Alias <alias>=<keyword>]
  * [AliasErase <alias | * > ] toegevoegd
  * [AliasList] toegevoegd.
- Commando [FileErase] wist alle bestanden als Par1 een asterisk '*' teken is. (Vroeger was zonder parameters alles wissen)  

R626:
- Commando[Output] kan nu naast [On] en [Off] ook optie [All] meekrijgen. Dan worden alle uitgaande events altijd verzonden.

R633:
- Bug in SendTo/EventlistWrite van build R626 opgelost.
- Status opvragen met SendTo levert geen events op maar directe weergave op terminal !!!
- EventlistShow kan worden opgevraagd met een SendTo
- Plugin_020 (BMP085Read) aangepast. WireNodo library aanpassing.

R635:
- Issue 792:	'Wire' was not declared in this scope voor plugin 20 en 21.
- Issue 793:	"#define CLOCK false" geeft problemen met compileren
- Issue 815:	Plugin 20 komt niet door de compiler
- Issue 794:	P24 werkt niet op Arduino 1.0.1. (de geadviseerde versie volgens Nodo.Ino) wel met 1.0.5.

R637:
- Ethernet code wordt in het geheel niet meer meegecompileerd als de ethernet library niet ge-include is. #define Ethernet komen te vervallen.
- Commando [VariableReceive] vervangen door [VariableGet <VariabeleBestemming>, <UnitBron>, <VariabeleBron>]
- Tekst "SendTo error." gerenamed naar de algemenere melding "Communication error.". Dit i.v.m. hergebruik elders.

R640:
- Commando [Sleep] toegevoegd. Sleep zet de Arduino in de energiezuinige mode en wordt wakker bij aflopen van een timer.

R641:
- Aanpassing [Sleep] onder de motorkap

Nog te doen:

- Reboot vanuit sendto ander oplossen
- Bug: Boot van een Slave claimt soms de RF band. Waarom deze lock en komt de band niet vrij?
- Bug: Input=RF; Unit=4; Event=Message 14,5: Plugin returned an error. ==> Reboot master !
- uitklokken ontvangstroutine met analyser
- Aanpassen en testen: Lock mechanisme
\*****************************************************************************************/
